// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BcscButton default 1`] = `
<div
  className="outline"
>
  <div
    className="center-align"
  >
    <button
      className="login_bcsc btn"
      onClick={[Function]}
      type="button"
    >
      Login with a BC Services Card
    </button>
  </div>
</div>
`;

exports[`Storyshots Heading default 1`] = `
<div
  className="spacing"
>
  <h1
    className="sub-heading head"
  >
    Welcome to Secure File Upload & Storage
  </h1>
  <br />
  <p
    className="text head"
  >
    The Secure File Upload & Storage allows you to securely upload and store files on an S3 compatible storage bucket.
  </p>
</div>
`;

exports[`Storyshots Loader default 1`] = `
<div
  className="loader-align"
>
  <div
    className="page-loader"
  />
  <br />
  Loading... Please Wait
</div>
`;

exports[`Storyshots NavBar isDownload 1`] = `
<div
  className="blue spacing"
>
  <nav
    className="navbar navbar-expand-md sticky-top"
  >
    <div
      className="container-fluid"
    >
      <a
        className="navbar-brand"
        href="https://ca.nttdata.com/en/"
      >
        <img
          alt="s3 logo"
          height="40px"
          src="undefined/images/s3.svg"
          width="55px"
        />
      </a>
      <span
        className="links"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        Upload
      </span>
    </div>
  </nav>
  <p
    className="main-heading"
  >
    Secure File Upload & Storage
  </p>
</div>
`;

exports[`Storyshots NavBar isUpload 1`] = `
<div
  className="blue spacing"
>
  <nav
    className="navbar navbar-expand-md sticky-top"
  >
    <div
      className="container-fluid"
    >
      <a
        className="navbar-brand"
        href="https://ca.nttdata.com/en/"
      >
        <img
          alt="s3 logo"
          height="40px"
          src="undefined/images/s3.svg"
          width="55px"
        />
      </a>
      <span
        className="links"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        Get Files
      </span>
    </div>
  </nav>
  <p
    className="main-heading"
  >
    Secure File Upload & Storage
  </p>
</div>
`;

exports[`Storyshots Uploader default 1`] = `
<div
  className="spacing custom-width"
>
  <div
    className="filepond--wrapper"
  >
    <input
      multiple={true}
      type="file"
    />
  </div>
</div>
`;

exports[`Storyshots UserInfo default 1`] = `
<div
  className="spacing"
>
  <p
    className="head"
  >
    <b>
      Name: 
    </b>
  </p>
  <p
    className="head"
  >
    <b>
      Birthdate: 
    </b>
  </p>
  <p
    className="head"
  >
    <b>
      Gender: 
    </b>
  </p>
  <p
    className="head"
  >
    <b>
      Address: 
    </b>
  </p>
</div>
`;
